add contact page

--- a/boomers-blog.html
+++ b/boomers-blog.html
@@ -28,5 +28,8 @@
       <img src="img/PB.jpg" alt="spoon full of peanut butter" width="200px">
     </li>
   </ol>
+  <footer>
+    <a href="contact.html">Contact Info</a>
+  </footer>
   </body>
 </html>
