add CSS to the HTML

--- a/boomers-blog.html
+++ b/boomers-blog.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/boomer.css" rel="stylesheet" type="text/css">
     <title>Boomer's Blog</title>
   </head>
   <body>
@@ -16,15 +17,15 @@
   <h2>Favorite Foods</h2>
   <ol>
     <li>
-      Cheese
-      <img src="img/cheese.jpg" alt="dog and cheese" width="200px">
+        <p>Cheese</p>
+        <img src="img/cheese.jpg" alt="dog and cheese" width="200px">
     </li>
     <li>
-      Steak
+      <p>Steak</p>
       <img src="img/steak.jpg" alt="juicy steak" width="200px">
     </li>
     <li>
-      Peanut Butter
+      <p>Peanut Butter</p>
       <img src="img/PB.jpg" alt="spoon full of peanut butter" width="200px">
     </li>
   </ol>
