--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/boomer.css" rel="stylesheet" type="text/css">
     <title>Contact Info</title>
   </head>
   <body>
